# gameshow-v2

./: .dockerignore  .env  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: docker.yml  rust.yml
questions/: .gitignore
src/: database.rs  datahandler.rs  game.rs  lib.rs  main.rs  webserver.rs
src/datahandler/: database.rs  dataworker.rs  mod.rs
src/game/: data.rs  events.rs  questions.rs  state.rs
src/webserver/: api.rs  events.rs
src/webserver/api/: lobby.rs
static/: index.html
static/css/: app.1059d07a.css  app.15efda61.css  app.22d4a86e.css  app.26109662.css  app.2c6aab55.css  app.2e345f22.css  app.3c678030.css  app.45e01be9.css  app.48155052.css  app.553fc453.css  app.5a6fc504.css  app.6cb0cbf1.css  app.945b2c63.css  app.99bae7d9.css  app.a37a6764.css  app.a40bbc3c.css  app.b13cb9ce.css  app.b2c9c5c6.css  app.b481f4d8.css  app.bf2ffcca.css  app.bf4f0abf.css  app.c2501959.css  app.eec75ce9.css  app.f40f9411.css
static/js/: app-legacy.058761d9.js  app-legacy.058761d9.js.map  app-legacy.11ee5f23.js  app-legacy.11ee5f23.js.map  app-legacy.154c195e.js  app-legacy.154c195e.js.map  app-legacy.1665284f.js  app-legacy.1665284f.js.map  app-legacy.1e488003.js  app-legacy.1e488003.js.map  app-legacy.238bab13.js  app-legacy.238bab13.js.map  app-legacy.28826194.js  app-legacy.28826194.js.map  app-legacy.3199a463.js  app-legacy.3199a463.js.map  app-legacy.40f68155.js  app-legacy.40f68155.js.map  app-legacy.42dff43f.js  app-legacy.42dff43f.js.map  app-legacy.445a6c0a.js  app-legacy.445a6c0a.js.map  app-legacy.48d38d36.js  app-legacy.48d38d36.js.map  app-legacy.4dacb9a5.js  app-legacy.4dacb9a5.js.map  app-legacy.58f6c93c.js  app-legacy.58f6c93c.js.map  app-legacy.5bdfc64e.js  app-legacy.5bdfc64e.js.map  app-legacy.6cffe1a2.js  app-legacy.6cffe1a2.js.map  app-legacy.72d698bf.js  app-legacy.72d698bf.js.map  app-legacy.74b1f079.js  app-legacy.74b1f079.js.map  app-legacy.7fe10e32.js  app-legacy.7fe10e32.js.map  app-legacy.8e6804ee.js  app-legacy.8e6804ee.js.map  (+106 more)
vue/: Makefile
vue/gameshow/: README.md  package-lock.json  package.json
vue/gameshow/public/: index.html  test.htm
(+19 files in other folders)
