[package]
name = "gameshow-v2"
version = "0.1.0"
authors = ["FlixCoder"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
actix-web = "3"
actix-files = "0.5"
actix-session = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8"

#actix-web = { version = "4.0.0-beta.3", features = ["secure-cookies"] }
#tokio = { version = "1", features = ["full"] }
#uuid = { version = "0.8", features = ["v4", "serde"] }

[profile.release]
lto = true
