[package]
name = "gameshow-v2"
version = "1.0.0"
authors = ["FlixCoder"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "3"
actix-files = "0.5"
actix-session = "0.4"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
rand = "0.8"

#actix-web = { version = "4.0.0-beta.6", features = ["secure-cookies"] }
#tokio = { version = "1", features = ["sync", "time"] }
#tokio = { version = "1", features = ["full"] }
#uuid = { version = "0.8", features = ["v4", "serde"] }

[profile.release]
lto = true
