[package]
authors = ["FlixCoder"]
edition = "2021"
name = "gameshow-v2"
version = "1.0.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = {version = "0.7.2", features = ["cookie-session"]}
actix-web = "4.2.1"
dotenvy = "0.15.6"
futures = "0.3.25"
rand = "0.8.5"
serde = {version = "1.0.151", features = ["derive"]}
serde_json = "1.0.90"
tokio = {version = "1.23.0", features = ["sync"]}
tokio-stream = {version = "0.1.11", features = ["sync"]}
uuid = {version = "1.2.2", features = ["v4"]}

[profile.release]
lto = true
